Fix image rendering on Firefox

--- a/src/css/home.styl
+++ b/src/css/home.styl
@@ -27,27 +27,25 @@ body
 	color white
 	padding 20px
 	
-
 #imageOne
 	background url(images/6J7A0256.jpg)
-	background-position-x -800px
+	background-position -800px center;
 	
 #imageTwo
 	background url(images/6J7A0277.jpg)
-	background-position-x -100px
-	background-position-y -80px
+	background-position -100px -80px;
 	
 #imageThree
 	background url(images/6J7A0319.jpg)
-	background-position-x -400px
+	background-position -400px center;
 	
 #imageFour
 	background url(images/6J7A0494.jpg)
-	background-position-x -600px
+	background-position -600px center;
 
 #imageFive
 	background url(images/6J7A0443.jpg)
-	background-position-x -350px
+	background-position -350px center;
 	
 .slick-next:hover, .slick-prev:hover, .slick-next:focus, .slick-prev:focus
 	background-color gray
